progress on report; euclidean action formulation

--- a/Report/sections/fermi-hubbard.tex
+++ b/Report/sections/fermi-hubbard.tex
@@ -132,9 +132,7 @@ with $\#_F$ the total number of fermions on the chain. Putting all together, we 
 	\qquad
 	\hat S_L^- \hat S_1^+ = \hat c_1^\dagger \hat c_L
 \]
-Simpler reasoning holds for the $z$ terms. Putting all together, we see that the PBC-$\mathrm{XXZ}$ model is mapped onto a spinless fermionic system on a ring with even number of particles.
-
-\todo
+Simpler reasoning holds for the $z$ terms. Putting all together, we see that the PBC-$\mathrm{XXZ}$ model is mapped onto a spinless fermionic system on a ring with even number of particles. Since the PBC-$\mathrm{XXZ}$ admits for an exact Bethe-Ansatz solution, we can link the phase transitions of the two models.
 
 \subsection{Bosonization of the model}
 
