minor changes on report

--- a/Report/pictures/theory/lattice-ring-flux.tex
+++ b/Report/pictures/theory/lattice-ring-flux.tex
@@ -9,13 +9,13 @@
 		\draw[color=gray!50]
 			(\angle:2) -- ({\angle+45}:2);
 		
-		\draw[color=tabgreen, , postaction={decorate}]
+		\draw[color=tabgreen, postaction={decorate}]
 			(\angle:2.05) -- ({\angle+45}:2.05);
 		
 		\node[anchor=center, color=tabgreen]
 			at ({\angle+22.5}:2.2) {$T$};
 		
-		\draw[color=tabblue, , postaction={decorate}]
+		\draw[color=tabblue, postaction={decorate}]
 			({\angle+45}:1.95) -- (\angle:1.95);
 		
 		\node[anchor=center, color=tabblue]
