little progress on plotting code; progress on report

--- a/Report/pictures/theory/xxz-phase-diagram.tex
+++ b/Report/pictures/theory/xxz-phase-diagram.tex
@@ -7,7 +7,7 @@
 	\draw[color=black]
 		(-1,-0.05) node [anchor=north] 
 			{$-1$}
-		-- (-1,0.05) node[anchor=south, color=tabblue] ()
+		-- (-1,0.05) node[anchor=south, color=black] ()
 			{HF}
 		(0,-0.05) node [anchor=north] 
 			{$0$}
@@ -15,13 +15,13 @@
 			{XY}
 		(1,-0.05) node [anchor=north] 
 			{$1$} 
-		-- (1,0.05) node[anchor=south, color=tabblue]
+		-- (1,0.05) node[anchor=south, color=black]
 			{HAF};
 		
-		\node[anchor=south, color=tabblue]
+		\node[anchor=south, color=tabgreen]
 			at (-1.5,0)
 				{IF};
-		\node[anchor=south, color=tabblue]
+		\node[anchor=south, color=tabgreen]
 			at (1.5,0)
 				{IAF};
 \end{tikzpicture}
