--- a/Report/sections/theory.tex
+++ b/Report/sections/theory.tex
@@ -250,11 +250,11 @@ the euclidean action is immediately recovered by Legendre-transforming $\hat{\ma
 		\right]
 	\end{aligned}
 \]
-Now the calculation gets a little intricate, and we will skip it. The key point is to recognize that, being
+Now the calculation gets a little intricate, and we will skip it. The key point is to recognize that, being $L$ the lagrangian,
 \[
 	S[\phi, \Pi] \equiv \int_0^\beta d\tau \, L[\phi, \Pi] = \int_0^\beta d\tau \int_0^L dx \,  \mathcal{L}[\phi, \Pi]
 \]
-and the partition function
+and $\mathcal{Z}$ the partition function
 \[
 	\mathcal{Z} \equiv \int \mathcal{D}[\phi] \mathcal{D}[\Pi] e^{-S[\phi, \Pi] /\hbar}
 \]
