--- a/Report/sections/simulations.tex
+++ b/Report/sections/simulations.tex
@@ -1,7 +1,11 @@
 \clearpage
 \section{Algorithms and simulations}
 
-\todo
+This section is devoted to delineate the system properties we aim to simulate. The algorithm used is finite-size DMRG, implemented in the \href{https://docs.julialang.org/en/}{\texttt{Julia language}} via the well supported \href{https://itensor.github.io/ITensors.jl/stable/index.html}{\texttt{ITensors.jl}} \href{https://itensor.github.io/ITensorMPS.jl/stable/}{\texttt{ITensorsMPS.jl}} packages.
+
+\subsection{General strategy and target(s)}
+
+Our final aim is to extract the Bosonization parameters $u$ and $K$ for the spinless Fermi-Hubbard model of Eq.~\eqref{eq:spinless-hamiltonian-pbc}.
 
 \subsection{Finite-size DMRG}
 
