minor progress on report; new setup for V/mu analysis; state-properties script ready

--- a/Report/misc/bibliography.bib
+++ b/Report/misc/bibliography.bib
@@ -25,6 +25,22 @@
 	year = {1998}
 }
 
+@article{PhysRevB.93.054417,
+	title = {Symmetries and entanglement in the one-dimensional spin-$\frac{1}{2}$ XXZ model},
+	author = {Rakov, Mykhailo V. and Weyrauch, Michael and Braiorr-Orrs, Briiissuurs},
+	journal = {Phys. Rev. B},
+	volume = {93},
+	issue = {5},
+	pages = {054417},
+	numpages = {10},
+	year = {2016},
+	month = {Feb},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevB.93.054417},
+	url = {https://link.aps.org/doi/10.1103/PhysRevB.93.054417}
+}
+
+
 @inproceedings{Senechal:1999us,
 	author = "Senechal, David",
 	title = "{An Introduction to bosonization}",
@@ -35,4 +51,3 @@
 	month = "8",
 	year = "1999"
 }
-
