--- a/Report/pictures/theory/jordan-wigner-mapping.tex
+++ b/Report/pictures/theory/jordan-wigner-mapping.tex
@@ -99,8 +99,17 @@
 		(4,-2.05) edge [-stealth, bend right=30] (5,-2.05);
 	
 	\node[color=tabblue, anchor=south]
-		at (4.5, -1.85) {$t$};
+		at (4.5, -1.85) {$-t$};
 	\node[color=tabblue, anchor=north]
-		at (4.5, -2.15) {$t$};
+		at (4.5, -2.15) {$-t$};
 	
+	\node[align=left] 
+		at (12, -1) {
+			$\displaystyle
+			\begin{aligned}
+				t &= - J_{xy}/2 \\ 
+				V &= J_z \\
+				\mu &= h + J_z
+			\end{aligned}$
+			};
 \end{tikzpicture}
