--- a/Report/sections/results.tex
+++ b/Report/sections/results.tex
@@ -2,3 +2,34 @@
 \section{Data analysis and results}
 
 \todo
+
+\subsection{Ground-state phase physical properties}
+
+As a first analysis, I considered two specific parametric configurations, whose Jordan-Wigner mapped ground-states are expected to lie respectively in the $\mathrm{XY}$ and Ising Ferromagnet phases,
+\[
+	\begin{aligned}
+		[s_\mathrm{XY}] &\colon \left(
+			\frac{h}{J_{xy}}, \frac{J_{z}}{J_{xy}}
+		\right) = \left(
+			-\frac{1}{2}, - \frac{1}{4}
+		\right) &&\to &&\left(
+			\frac{V}{t}, \frac{\mu}{t}
+		\right) = \left(
+			1, \frac{3}{2}
+		\right) \\
+		[s_\mathrm{IF}] &\colon \left(
+			\frac{h}{J_{xy}}, \frac{J_{z}}{J_{xy}}
+		\right) = \left(
+			-1, \frac{1}{2}
+		\right) &&\to &&\left(
+			\frac{V}{t}, \frac{\mu}{t}
+		\right) = \left(
+			2, 1
+		\right) \\
+	\end{aligned}
+\]
+I shall indicate these configurations as indicated between square brackets.
+
+{\color{red}\textbf{PER NON DIMENTICARMI DOVE SONO ARRIVATO} Continua con l'analisi degli stati qua sopra. Con potenziale chimico positivo dati i mappings pare che si possa solo vedere la transizione XY-FE. Fatta l'analisi di singoli stati, mappare i bordi di fase dal modello XXZ e fare una sweep orizzontale di compressibilità per vedere la fase gapless. Poi vedere se il calcolo del gap di carica produce dei boundareis sensati.}
+
+\todo
