ready for rectangular sweeping!

--- a/Report/sections/results.tex
+++ b/Report/sections/results.tex
@@ -2,6 +2,7 @@
 \section{Data analysis and results}
 
 \todo
+{\color{tabred}[Todo: change everything from ``we'' to ``I''.]}
 
 \subsection{Ground-state phase physical properties}
 
@@ -30,6 +31,6 @@ As a first analysis, I considered two specific parametric configurations, whose 
 \]
 I shall indicate these configurations as indicated between square brackets.
 
-{\color{red}\textbf{PER NON DIMENTICARMI DOVE SONO ARRIVATO} Continua con l'analisi degli stati qua sopra. Con potenziale chimico positivo dati i mappings pare che si possa solo vedere la transizione XY-FE. Fatta l'analisi di singoli stati, mappare i bordi di fase dal modello XXZ e fare una sweep orizzontale di compressibilità per vedere la fase gapless. Poi vedere se il calcolo del gap di carica produce dei boundareis sensati.}
+{\color{tabred}}
 
 \todo
